tests/fixtures/valid/expresiones.syn
#lang: es

funcion expr() -> int:
    x = -5
    retornar x * (2 + 3)
