tests/fixtures/invalid/tortura_shadowing.syn
#lang: es
funcion duplicada() -> int:
    retornar 1

funcion duplicada() -> int:
    retornar 2
